--- a/index.html
+++ b/index.html
@@ -561,130 +561,130 @@
     }
 
     /* Media Queries for Responsiveness */
-    @media screen and (max-width: 768px) {
-        nav {
-            padding: 15px;
-            position: fixed; /* Use fixed positioning for the nav bar */
-            top: 0;
-            left: 0;
-            width: 100%;
-            z-index: 100;
-        }
-
-        .hamburger {
-            display: block;
-            cursor: pointer;
-            padding: 10px;
-        }
-
-        .bar {
-            display: block;
-            width: 25px;
-            height: 3px;
-             margin: 5px auto;
-            -webkit-transition: all 0.3s ease-in-out;
-            transition: all 0.3s ease-in-out;
-            background-color: white;
-        }
-
-        .hamburger.active .bar:nth-child(2) {
-            opacity: 0;
-        }
-
-        .hamburger.active .bar:nth-child(1) {
-            transform: translateY(8px) rotate(45deg);
-        }
-
-        .hamburger.active .bar:nth-child(3) {
-            transform: translateY(-8px) rotate(-45deg);
-        }
-
-        .nav-menu {
-            display: none !important;
-            position: fixed; /* Absolutely position the menu */
-            top: 60px; /* Adjust based on your nav height */
-            left: 0;
-            background-color: #080808;
-            width: 100%;
-            text-align: center;
-            overflow-y: auto; /* Enable scrolling within the menu if it gets long */
-            max-height: calc(100vh - 80px); /* Limit the menu height to the viewport height minus the nav height */
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            z-index: 99; /* Ensure it's below the nav */
-        }
-
-        .nav-menu.active {
-            display: flex !important;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px 0; /* Add some padding to the menu container */
-        }
-
-        .nav-menu li {
-            margin: 15px 0; /* Add vertical margin to list items */
-        }
-
-        .nav-menu li a {
-            display: block; /* Make the whole area clickable */
-            padding: 10px 15px; /* Add padding to the links */
-            color: white;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-
-        .nav-menu li a:hover,
-        .nav-menu li a.active {
-            color: #c780eb;
-        }
-
-        .nav-menu li a:hover::after,
-        .nav-menu li a.active::after {
-            content: '';
-            position: absolute;
-            left: 50%;
-            bottom: 5px;
-            width: 0;
-            height: 2px;
-            background-color: #c780eb;
-            transform: translateX(-50%);
-            transition: width 0.3s ease;
-        }
-
-        .nav-menu li a:hover::after,
-        .nav-menu li a.active::after {
-            width: 50%;
-        }
-
-        body.menu-open {
-            padding-top: 60px; /* Add padding to the body to push content down */
-        }
-
-        /* Rest of your mobile styles for other sections */
-        #home {
-            padding-top: 60px; /* Add initial padding to home to avoid overlap */
-            padding-bottom: 60px;
-            padding-left: 20px;
-            padding-right: 20px;
-        }
-
-        /* Adjust padding for other sections as needed to account for the fixed header */
-        #skills,
-        #about,
-        #projects,
-        #contact {
-            padding-top: 60px;
-            padding-bottom: 40px;
-            padding-left: 20px;
-            padding-right: 20px;
-        }
-
-        #projects .project-grid {
-            grid-template-columns: 1fr;
-            gap: 40px;
-        }
+@media screen and (max-width: 768px) {
+    nav {
+        padding: 15px;
+        position: fixed; /* Use fixed positioning for the nav bar */
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 100;
     }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+        padding: 10px;
+    }
+
+    .bar {
+        display: block;
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        -webkit-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+        background-color: white;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav-menu {
+        display: none !important;
+        position: fixed; /* Absolutely position the menu */
+        top: 60px; /* Adjust based on your nav height */
+        left: 0;
+        background-color: #080808;
+        width: 100%;
+        text-align: center;
+        overflow-y: auto; /* Enable scrolling within the menu if it gets long */
+        max-height: calc(100vh - 60px); /* Limit the menu height */
+        list-style: none;
+        margin: 0;
+        padding: 10px 0; /* Reduced top and bottom padding */
+        z-index: 99; /* Ensure it's below the nav */
+    }
+
+    .nav-menu.active {
+        display: flex !important;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 0; /* Reduced top and bottom padding when active */
+    }
+
+    .nav-menu li {
+        margin: 10px 0; /* Reduced vertical margin for list items */
+    }
+
+    .nav-menu li a {
+        display: block; /* Make the whole area clickable */
+        padding: 8px 15px; /* Reduced vertical padding for links */
+        color: white;
+        text-decoration: none;
+        transition: color 0.3s ease;
+        font-size: 1em; /* Slightly reduce font size if needed */
+    }
+
+    .nav-menu li a:hover,
+    .nav-menu li a.active {
+        color: #c780eb;
+    }
+
+    .nav-menu li a:hover::after,
+    .nav-menu li a.active::after {
+        content: '';
+        position: absolute;
+        left: 50%;
+        bottom: 3px; /* Adjust underline position */
+        width: 0;
+        height: 2px;
+        background-color: #c780eb;
+        transform: translateX(-50%);
+        transition: width 0.3s ease;
+    }
+
+    .nav-menu li a:hover::after,
+    .nav-menu li a.active::after {
+        width: 50%;
+    }
+
+    body.menu-open {
+        padding-top: 60px; /* Add padding to the body to push content down */
+    }
+
+    /* Rest of your mobile styles for other sections */
+    #home {
+        padding-top: 60px;
+        padding-bottom: 60px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    #skills,
+    #about,
+    #projects,
+    #contact {
+        padding-top: 60px;
+        padding-bottom: 40px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    #projects .project-grid {
+        grid-template-columns: 1fr;
+        gap: 40px;
+    }
+}
 </style>
 </head>
 
