--- a/index.html
+++ b/index.html
@@ -873,9 +873,8 @@
         </div>
     </section>
 
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
+<script>
+ document.addEventListener("DOMContentLoaded", function () {
             const sections = document.querySelectorAll(".fade-in");
             const observer = new IntersectionObserver(entries => {
                 entries.forEach(entry => {
@@ -916,13 +915,9 @@
 
             window.addEventListener("scroll", function() {
                 const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
-                if (scrollTop > lastScrollTop) {
-                    nav.classList.add("hidden");
-                    hamburger.classList.add("hidden");
-                } else {
-                    nav.classList.remove("hidden");
-                    hamburger.classList.remove("hidden");
-                }
+                // Make the nav and hamburger disappear on any scroll direction
+                nav.classList.add("hidden");
+                hamburger.classList.add("hidden");
                 lastScrollTop = scrollTop;
             });
 
