--- a/index.html
+++ b/index.html
@@ -874,7 +874,21 @@
     </section>
 
 <script>
- document.addEventListener("DOMContentLoaded", function () {
+     document.addEventListener("DOMContentLoaded", function () {
+            const sections = document.querySelectorAll(".fade-in");
+            const observer = new IntersectionObserver(entries => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add("visible");
+                        entry.target.querySelectorAll(".progress-fill").forEach(bar => {
+                            bar.style.width = bar.getAttribute("data-progress");
+                        });
+                    }
+                });
+            }, { threshold: 0.3 });
+
+            sections.forEach(section => observer.observe(section));
+
             const sections = document.querySelectorAll(".fade-in");
             const observer = new IntersectionObserver(entries => {
                 entries.forEach(entry => {
