--- a/index.html
+++ b/index.html
@@ -788,16 +788,15 @@
         </div>
     </section>
 
-
-    <section id="projects" class="w-full text-white p-10 fade-in rounded-lg hover-effect">
+<section id="projects" class="w-full text-white p-8 fade-in rounded-lg hover-effect">
         <div class="max-w-5xl mx-auto">
-            <h2 class="text-3xl font-bold mb-2">PORTFOLIO</h2>
-            <div style="width: 50px; height: 5px; margin: 0 auto 10px; background-image: linear-gradient(to right, #9d4edd, #eb8099);"></div>
-            <p class="text-gray-400 mb-6">Selected projects showcasing my creative work</p>
+            <h2 class="text-2xl font-bold mb-1">PORTFOLIO</h2>
+            <div style="width: 40px; height: 3px; margin: 0 auto 8px; background-image: linear-gradient(to right, #9d4edd, #eb8099);"></div>
+            <p class="text-gray-400 mb-4">Selected projects showcasing my creative work</p>
             <div class="project-grid">
                 <div class="project-item">
                     <a href="https://github.com/Aspergilleshumania/BlogSphere" target="_blank" style="display: block;">
-                        <img src="BlogSphere.png" alt="BlogSphere" style="height:300px; width:900px;">
+                        <img src="BlogSphere.png" alt="BlogSphere" style="height:200px; width:100%;">
                         <div class="project-overlay">
                             <h3>BlogSphere</h3>
                             <p>Full Stack Website using Django Framework</p>
@@ -806,7 +805,7 @@
                 </div>
                 <div class="project-item">
                     <a href="https://github.com/rahulp0817/automation-workflow" target="_blank" style="display: block;">
-                        <img src="CogniTask.png" alt="CogniTask" style="height:300px; width:900px;">
+                    <img src="CogniTask.png" alt="CogniTask" style="height:200px; width:100%;">
                         <div class="project-overlay">
                             <h3>CogniTask</h3>
                             <p>Automation Platform</p>
@@ -816,6 +815,8 @@
             </div>
         </div>
     </section>
+
+
 
 
     <section id="about" class="w-full text-white p-10 fade-in rounded-lg hover-effect">
