--- a/index.html
+++ b/index.html
@@ -732,18 +732,31 @@
         </ul>
     </nav>
 
-    <section id="home" class="flex justify-center items-center min-h-screen">
+<section id="home" class="flex justify-center items-center min-h-screen">
+
         <div class="text-center">
-            <h1 class="text-5xl font-bold">Hi, I'm <span class="text-purple-400 underline-purple">Kaushik</span>
+
+            <h1 class="text-3xl font-bold">Hi, I'm <span class="text-purple-400 underline-purple">Kaushik</span>
+
             </h1>
-            <p class="mt-3 text-lg text-gray-300">A passionate software developer.</p>
-            <p class="mt-3 text-md text-gray-400">I specialize in building dynamic websites using Django and
+
+            <p class="mt-2 text-lg text-gray-300">A passionate software developer.</p>
+
+            <p class="mt-2 text-sm text-gray-400">I specialize in building dynamic websites using Django and
+
                 continuously explore new technologies to optimize performance and user experience.</p>
-            <div class="mt-5">
-                <button class="btn-outline ml-3">Contact Me</button>
+
+            <div class="mt-4">
+
+                <button class="btn-outline">Contact Me</button>
+
             </div>
+
         </div>
+
     </section>
+
+
 
     <section id="skills" class="w-full text-white p-10 text-center fade-in rounded-lg hover-effect">
         <h2 class="text-3xl font-bold mb-2">SKILLS</h2>
